fixed spacing between flickr images by adding htmlToPage.join(''). There were commas separating the photos which resulted in spacing issues

--- a/style.scss
+++ b/style.scss
@@ -167,4 +167,11 @@ body{
   iframe {
     order: 1;
   }
+
+  .subtitle {
+    color: #EEE;
+    position: absolute;
+    font-size: 1.5rem;
+    // margin:.5rem 0 0 0;
+  }
 }
